apps/wx/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wx-mosquitto
  namespace: wx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: wx
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosquitto
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
